# OBSMCP

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  backup_obsmcp.bat  bootstrap_obsmcp.bat  ctx.bat  docker-compose.yml  install_task_scheduler.bat  master prompt.md  pyproject.toml  requirements.txt  run_obsmcp.bat  start.bat  start.sh  start_obsmcp.bat  stop_obsmcp.bat  test_phases.py  uninstall_task_scheduler.bat
.claude/: settings.json
.github/workflows/: ci.yml
cli/: __init__.py  main.py
config/: mcp-client-example.json  obsmcp.json
docs/: ARCHITECTURE.md  FOLDER_STRUCTURE.md  INSTALLATION.md  NEXT_COMMIT_PLAN.md  OBSIDIAN.md  OPUSMAX_TOOL_AUDIT.md  STARTUP.md  TESTING.md  TROUBLESHOOTING.md  USAGE.md
frontend/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: backup_obsmcp.py  launch_obsmcp.py  launch_obsmcp.vbs  stop_obsmcp.py
server/: __init__.py  code_atlas.py  compression.py  config.py  context_sync.py  database.py  hub.py  llm_client.py  main.py  mcp_protocol.py  observability.py  obsidian.py  opusmax_provider.py  output_policy.py  projects.py  semantic.py  service.py  store.py  utils.py
server/obsmcp_server/: __init__.py  auth.py  config.py  db.py  main.py  schema.sql  sse.py  ws.py
server/tests/: conftest.py  test_auth.py  test_health.py  test_knowledge_graph.py  (+1 more)
tests/: test_compression.py  test_config.py  test_mcp_protocol.py  test_opusmax_provider.py  test_output_policy.py  test_service.py
tools/: MANUAL_PROMPT.md  UNIVERSAL_AI_INSTRUCTIONS.md
(+61 files in other folders)
